80-zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/websocket-services: zigbee2mqtt
    external-dns.alpha.kubernetes.io/hostname: zigbee2mqtt.crt.house
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  ingressClassName: nginx-crt-house
  rules:
  - host: zigbee2mqtt.crt.house
    http:
      paths:
      - backend:
          service:
            name: zigbee2mqtt
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - zigbee2mqtt.crt.house
